fix mis alignment in image grid

--- a/styles/components/WorkSectionAsGallery.scss
+++ b/styles/components/WorkSectionAsGallery.scss
@@ -1,44 +1,44 @@
-.WorkSectionAsGallery{
-    &__work-hover-overlay {
-        &--for-image {
-            width: 100%; 
-            height: 100%;
-        }
-
-        &--for-video {
-            width: 100%; 
-            height: 99.5%; 
-        }
-
-        opacity: 1;
-
-        @include media('lg-up') {
-            opacity: 0;
-        }
-        background: linear-gradient(to bottom, transparent 0%, black 200%);
-
-        font-family: $sans-serif-stack;
-        font-size: .75rem; 
-        &--title {
-            font-weight: bold; 
-        }
-        
-        z-index: 99; 
-
-        &--info {
-            height: 3rem; 
-        }
-
-        &--video-button {
-            all: unset; 
-            cursor: pointer; 
-            height: 2rem; 
-            margin: 0rem .5rem .5rem 0rem;
-        }
+.WorkSectionAsGallery {
+  &__work-hover-overlay {
+    &--for-image {
+      width: 100%;
+      height: 100%;
     }
 
-    &__work-hover-overlay:hover {
-        opacity: 1; 
-        background: linear-gradient(to bottom, transparent 0%, black 200%);
+    &--for-video {
+      width: 100%;
+      height: 100%;
     }
+
+    opacity: 1;
+
+    @include media('lg-up') {
+      opacity: 0;
+    }
+    background: linear-gradient(to bottom, transparent 0%, black 200%);
+
+    font-family: $sans-serif-stack;
+    font-size: 0.75rem;
+    &--title {
+      font-weight: bold;
+    }
+
+    z-index: 99;
+
+    &--info {
+      height: 3rem;
+    }
+
+    &--video-button {
+      all: unset;
+      cursor: pointer;
+      height: 2rem;
+      margin: 0rem 0.5rem 0.5rem 0rem;
+    }
+  }
+
+  &__work-hover-overlay:hover {
+    opacity: 1;
+    background: linear-gradient(to bottom, transparent 0%, black 200%);
+  }
 }
